// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox should render properly with a options function 1`] = `
.emotion-2 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-0:hover {
  border: 2px solid #ffffff;
}

.emotion-0:focus {
  background-color: #ffffff;
  color: #000000;
}

<label
  className="emotion-2"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--1"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-0"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
    <span />
  </div>
</label>
`;

exports[`Combobox should render properly with an options array 1`] = `
.emotion-2 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-0:hover {
  border: 2px solid #ffffff;
}

.emotion-0:focus {
  background-color: #ffffff;
  color: #000000;
}

<label
  className="emotion-2"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--7"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-0"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
  </div>
</label>
`;

exports[`Combobox should render properly with error 1`] = `
.emotion-3 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 1px solid #c92300;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-0:hover {
  border: 2px solid #ffffff;
}

.emotion-0:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-2 {
  font-style: italic;
  color: #c92300;
}

<label
  className="emotion-3"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--8"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-0"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
    <span />
  </div>
  <div
    className="emotion-2"
  >
    error
  </div>
</label>
`;
